@@ -70,14 +70,12 @@ extern void fieldio_write_complex_field(scalar_complex *field,
 					const int dims[3],
 					int which_component,
 					int local_nx, int local_x_start,
-					const int copies[3],
 					const real kvector[3],
 					matrixio_id file_id);
 void fieldio_write_real_vals(real *vals,
                              int rank,
                              const int dims[3],
                              int local_nx, int local_x_start,
-                             const int copies[3],
 			     matrixio_id file_id);
 
 #endif /* MATRIXIO_H */
